# pepver

./: .flake8  lint.sh  pyproject.toml  readme.md
.github/workflows/: lint.yml  publish.yml  test.yml
pepver/: __init__.py
tests/: test_version.py
