[tool.poetry]
name = "pepver"
version = "1.0.0"
description = "PEP-440 version parsing, interpretation and manipulation"
authors = ["technomunk <thegriffones@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/technomunk/pepver"
repository = "https://github.com/technomunk/pepver"
keywords = ["version", "package"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
mypy = "*"
pylint = "*"
pytest = "^7.1.3"

[tool.black]
line-length = 100

[tool.pylint.main]
ignore-patterns = ["test_.+py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
